--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,12 @@
     <color name="brown_200">#c28c55</color>
     <color name="brown_400">#a86b2c</color>
     <color name="brown_700">#7a440b</color>
+    <color name="water">#0887EC</color>
+    <color name="green">#009644</color>
+    <color name="blue">#04A4B8</color>
+    <color name="forest">#97704F</color>
+    <color name="fire">#F44336</color>
+    <color name="milky_way">#004378</color>
+    <color name="colourful">#7617CA</color>
+    <color name="coffee">#855948</color>
 </resources>
