--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -9,6 +9,7 @@
     tools:context=".ui.timeractivity.TimerActivity">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -47,6 +48,20 @@
             app:srcCompat="@drawable/ic_navigate_next"
             app:tint="#000000" />
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/musicOn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#00FFFFFF"
+        android:tint="#000000"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout"
+        app:srcCompat="@drawable/ic_music_on"
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/timerButton"
