--- a/app/src/main/res/layout/custom_activity_list_item.xml
+++ b/app/src/main/res/layout/custom_activity_list_item.xml
@@ -38,6 +38,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/todayTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:textSize="20sp"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="@+id/activityNameInList"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/activityNameInList"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <Button
             android:id="@+id/statusIndicatorInList"
             android:layout_width="8dp"
@@ -46,7 +60,7 @@
             android:clickable="false"
             android:contextClickable="false"
             android:defaultFocusHighlightEnabled="false"
-            android:visibility="gone"
+            android:visibility="invisible"
             app:cornerRadius="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/activityBasicInfosInList"
@@ -60,7 +74,7 @@
             android:layout_width="50dp"
             android:layout_height="60dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             app:cornerRadius="30dp"
             app:icon="@drawable/ic_baseline_play_arrow_24"
