--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -270,7 +270,8 @@
                         <TextView
                             android:id="@+id/detailAllTime"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.33" />
+                            android:layout_weight="0.33"
+                            android:textColor="@color/black" />
                     </TableRow>
 
                 </TableLayout>
