--- a/app/src/main/res/layout/chip_layout.xml
+++ b/app/src/main/res/layout/chip_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/CustomChipFilter"
+    style="@style/Widget.MaterialComponents.Chip.Filter"
     android:layout_width="wrap_content"
     android:textColor="@color/black"
     android:layout_height="wrap_content">
