--- a/app/src/main/res/layout/fragment_personal_filter.xml
+++ b/app/src/main/res/layout/fragment_personal_filter.xml
@@ -9,7 +9,11 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,15 +54,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/yesterday_chip"
-                    app:chipBackgroundColor="@color/toms_100"
-                    app:rippleColor="@color/toms_400" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/pThreeDaysChip"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/three_days_chip"
                     app:chipBackgroundColor="@color/toms_100"
                     app:rippleColor="@color/toms_400" />
 
@@ -113,15 +108,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/select_custom_from_to"
-                    app:chipBackgroundColor="@color/toms_100"
-                    app:rippleColor="@color/toms_400" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/pAllChip"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/all_time_chip"
                     app:chipBackgroundColor="@color/toms_100"
                     app:rippleColor="@color/toms_400" />
 
